# EcommerceAtacadao

./: .gitignore  IDEA.md  REPORT.md  pyproject.toml
migrations/: env.py
migrations/versions/: 0281d41070fa_add_is_active_to_users.py  22f3d01488d4_add_default_roles.py  66981d93720c_criando_schema_inicial.py  6d510c90a1f1_add_description_column_to_category.py  7047b95fc407_patch_user_type_enum_values.py  8a055d96bbce_alter_tables_to_new_structure_.py  8f3c0d9a6b21_merge_user_detail_tables_into_users.py  ad8b0fb23e2b_add_is_active_column_to_category.py  c8e6efebe8c6_turn_name_column_in_category_and_.py  f0d3a031ca4d_alter_user_type_column_default_to_user_.py
src/: main.py  seed.py
src/core/: .config  config.py  db.py  sec.py
src/core/security/: __init__.py
src/models/: __init__.py  base.py  catalog.py  enums.py  identity.py  operations.py  sales.py
src/repositories/: base_repository.py
src/repositories/catalog/: category_repository.py  listing_attribute_repository.py  listing_image_repository.py  pricing_tier_repository.py  product_image_repository.py  product_listing_repository.py  product_question_repository.py  product_repository.py  product_review_repository.py  product_variant_repository.py
src/repositories/identity/: __init__.py  refresh_token_repository.py  user_repository.py
src/schemas/: base_schema.py  response_schema.py
src/schemas/catalog/: category_schema.py  listing_attribute_schema.py  listing_image_schema.py  pricing_tier_schema.py  product_image_schema.py  product_listing_schema.py  product_question_schema.py  product_review_schema.py  product_schema.py  product_variant_schema.py
src/schemas/identity/: user_schema.py
src/services/catalog/: category_service.py  listing_attribute_service.py  listing_image_service.py  pricing_tier_service.py  product_image_service.py  product_listing_service.py  product_service.py  (+3 more)
(+17 files in other folders)
