[project]
name = "ecommerce-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Lucas de Almeida Pessoa e Paulo Peris Rosa", email = "devs@ecommerce.com" }
]
readme = "README.md"
requires-python = ">=3.11"

# Dependências de Produção (A fundação da nossa Stack)
dependencies = [
    # API e Validação
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",  # Servidor ASGI de alta performance
    "pydantic[email]>=2.7.0",     # V2 para validação rigorosa
    "pydantic-settings>=2.2.0",   # Para ler o arquivo .env de forma segura
    "python-multipart>=0.0.9",    # Necessário para receber formulários/arquivos (ex: upload de imagens)
    # Banco de Dados e ORM
    "sqlalchemy>=2.0.30",         # Sintaxe 2.0 moderna e tipada
    "alembic>=1.13.1",            # Controle de versão do banco (Migrations)
    "asyncpg>=0.29.0",            # Driver assíncrono nativo para o PostgreSQL voar
    # Segurança e Autenticação
    "pyjwt>=2.8.0",               # Geração e validação de tokens JWT
    "passlib[bcrypt]>=1.7.4",     # Hashing de senhas padrão ouro
]

# Dependências de Desenvolvimento (Testes e Qualidade de Código)
[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",     # Para testar nossas rotas assíncronas
    "ruff>=0.4.4",                # Linter e Formatter super rápido (escrito em Rust igual o uv)
    "mypy>=1.10.0",               # Verificação extra de tipagem estática
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Configuração do Linter (Ruff)
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Ativa as regras de Erros, Funcionalidades e ordenação de Imports (I)
